finished assigning match
