# routes/user.routes.js
@@ -4,11 +4,15 @@ const {
   getUser,
   register,
   registerInterests,
+  assignMatch,
 } = require("../controllers/user.controller");
 const { protect } = require("../middleware/auth");
 const router = express.Router();
-router.route("/").get(getAllUsers).post(register);
-router.route("/interest")
-.post(protect,registerInterests);
+router.route("/")
+.get(getAllUsers)
+.post(register)
+router.route("/assignMatch")
+.put(assignMatch)
+router.route("/interest").post(protect, registerInterests);
 router.route("/:id").get(getUser);
 module.exports.userRoutes = router;
